# faber

./: .gitignore  .polish-inspected.json  AGENTS.md  Cargo.toml  README.md  build.rs  core-support-manifest.txt
.github/workflows/: release.yml
crates/exempla/: Cargo.toml  README.md
crates/exempla/corpus/: README.md
crates/exempla/data/: llvm_host_gaps.toml
crates/exempla/src/: lib.rs  paths.rs
crates/exempla/src/exempla_e2e/: common.rs  common_test.rs  conversio_target_matrix.rs  go.rs  gpu_workload.rs  gpu_workload_test.rs  hir_target_matrix.rs  llvm.rs  llvm_host.rs  llvm_host_test.rs  llvm_runtime.rs  llvm_runtime_test.rs  mir.rs  mir_target_matrix.rs  mir_target_matrix_test.rs  mir_test.rs  mod.rs  oracle.rs  oracle_test.rs  parity.rs  roundtrip.rs  rust.rs  rust_canonical.rs  script.rs  script_test.rs  sexp.rs  swift.rs  tensor_package.rs  tensor_package_test.rs  tensor_systems_closeout.rs  tensor_systems_closeout_test.rs  tensor_workload_proof.rs  tensor_workload_proof_test.rs  ts.rs  types.rs  wasm.rs  wasm_behavior_fixtures.rs  wasm_behavior_fixtures_test.rs  wasm_expectations.rs  wasm_external.rs  (+1 more)
crates/exempla/tests/: e2e_harness.rs
crates/exempla/tests/e2e_harness/: mod.rs
crates/http-transport/: Cargo.toml
crates/http-transport/src/: http_transport_test.rs  lib.rs
crates/hygiene-ratchet/: Cargo.toml
docs/design/: cli-surface-vs-radix-cista.md  product-composition-radix-cista.md
docs/factory/: README.md  check-state-consistency.sh  test-decomposition-report.md
docs/help/: faber-after-help.md
docs/release/: policy.md  process-versioning-and-deps.md  rc1-local-binary-evidence.md  v1.0.0-rc.2.md  v1.0.0.md  v1.1.1-sibling-pins.md
scripta/: check-store-only-resolve.sh
src/: cli_test.rs  core_support.rs  core_support_test.rs  diagnostic_explain.rs  diagnostic_explain_test.rs  explain.rs  explain_render.rs  explain_test.rs  input_shape.rs  input_shape_test.rs  io_buf.rs  lib.rs  library.rs  library_test.rs  main.rs  package_test.rs  package_text_contract_test.rs  reference.rs  reference_pack_test_support.rs  reference_parse.rs  reference_parse_test.rs  reference_test.rs  script_test.rs
src/cli/: emit.rs  mod.rs
src/commands/: archive.rs  emit.rs  explain.rs  format.rs  format_test.rs  host.rs  init.rs  install.rs  install_test.rs  mod.rs  run.rs  run_test.rs  script.rs  script_test.rs  targets.rs  test.rs
src/core_support/: assembler.rs  (+2 more)
tests/: clean_install_integration_test.rs  emit_integration_test.rs  format_integration_test.rs  hygiene.rs  install_path_integration_test.rs  run_integration_test.rs  web2_build_integration_test.rs
(+106 files in other folders)
