[package]
name = "faber"
version = "1.1.1"
edition = "2021"
description = "Faber project and package tool"
license = "MIT"

[lib]
name = "faber_cli"
path = "src/lib.rs"

[[bin]]
name = "faber"
path = "src/main.rs"

[dependencies]
# Private compiler workspace (local org layout). Not published with this crate.
radix = { path = "../radix/crates/radix" }
# Package-store library: Faber product composition may depend on cista the same
# way it depends on radix (docs/design/product-composition-radix-cista.md).
cista = { path = "../cista" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
fs2 = "0.4"
sha2 = "0.10"
tar = "0.4"
zstd = "0.13"

[build-dependencies]
sha2 = "0.10"
tar = "0.4"
zstd = "0.13"

[dev-dependencies]
hygiene-ratchet = { path = "crates/hygiene-ratchet" }
